# vhdl-parser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
.trunk/: out  trunk.yaml
data/: vhdl_pre_parse.yy  vhdl_sem.yacc  vhdl_sem_pure.yacc
data/vhdl/: fjel.vhd
lib/result/: LICENSE
src/: error.cpp  error.hpp  main.cpp
src/lex/: common.cpp  common.hpp  lexer.cpp  lexer.hpp  pre_parse_lexer.cpp  pre_parse_lexer.hpp  re2c_common.txt  token.cpp  token.hpp
src/lexer/: lexer.cpp  lexer.h  lexer.hpp  lexer_data.cpp  lexer_defs.cpp  lexer_defs.h  lexer_defs.hpp  lexer_out.cpp  lexer_utils.cpp  lexer_utils.hpp
src/parse/: location.hpp  parser_defs.hpp  vhdl_sem.yy
src/parser/: ast.cpp  parser_defs.cpp  parser_defs.h  parser_defs.hpp  vhdl_sem.yacc  vhdl_sem.yy
src/pre_parse/: pre_parse.cpp  pre_parse.hpp
